--- a/css/common.css
+++ b/css/common.css
@@ -10,12 +10,26 @@
 }
 
 html {
+    margin: 0;
+    padding: 0;
     font-size: 16px;
     font-family: "Poppins", sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 section {
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.row {
+    margin: 0;
+    padding: 0;
 }
