--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -1,13 +1,16 @@
-#hero {
-    width: 100%;
-    height: 100vh;
+#hero-top {
+    width: 100vw;
     background-image: url("../../images/hero-man.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-#hero #powerfull-btn {
+#hero-top .container {
+    padding: 20vh 0 5vh 0;
+}
+
+#hero-top #powerfull-btn {
     color: var(--header-text-color);
     background-color: var(--main-color);
     font-family: "Poppins", sans-serif;
@@ -18,13 +21,13 @@
     text-shadow: 3px 3px 5px black;
 }
 
-#hero .display-1 {
+#hero-top .display-1 {
     color: var(--header-text-color);
     font-family: "Poppins", sans-serif;
     font-weight: 630;
 }
 
-#hero h3 {
+#hero-top h3 {
     padding: 0.75rem;
     background-color: rgba(0, 0, 0, 0.6);
     color: var(--header-text-color);
@@ -32,7 +35,7 @@
     font-weight: 600;
 }
 
-#hero #signup-btn {
+#hero-top #signup-btn {
     color: var(--header-text-color);
     background-color: var(--main-color);
     font-family: "Poppins", sans-serif;
@@ -42,7 +45,7 @@
     border-radius: 0.4rem;
 }
 
-#hero #details-btn {
+#hero-top #details-btn {
     color: var(--header-text-color);
     border-color: var(--header-text-color);
     font-family: "Poppins", sans-serif;
@@ -53,6 +56,40 @@
     border-radius: 0.4rem;
 }
 
-#hero #details-btn:active{
+#hero-top #details-btn:active {
     background-color: var(--main-color);
+}
+
+#hero-bottom {
+    padding: 2rem 0;
+    background-color: var(--background-color-3);
+}
+
+#hero-bottom .container .row {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+#hero-bottom .container .card-body {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--header-text-color);
+    min-width: 150px;
+}
+
+#hero-bottom .container .card-body h4 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    color: var(--main-color);
+   
+}
+
+#hero-bottom .container .card-body h5 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    color: var(--text-color-2);
 }
