--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import "./common.css";
 @import "./sections/hero.css";
 @import "./sections/our-classes.css";
+@import "./sections/bmi.css";
 @import "./layouts/header.css";
