--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,5 @@
 @import "./sections/hero.css";
 @import "./sections/our-classes.css";
 @import "./sections/bmi.css";
+@import "./sections/trainers.css";
 @import "./layouts/header.css";
