--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,5 @@
 @import "./sections/our-classes.css";
 @import "./sections/bmi.css";
 @import "./sections/trainers.css";
+@import "./sections/purchase.css";
 @import "./layouts/header.css";
