--- a/css/common.css
+++ b/css/common.css
@@ -22,6 +22,7 @@ body {
 }
 
 section {
+    width: 100vw;
     margin: 0;
     padding: 0;
     display: flex;
@@ -32,4 +33,23 @@ section {
 .row {
     margin: 0;
     padding: 0;
+}
+
+p {
+    color: var(--text-color-1);
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+}
+
+h2 {
+    color: var(--main-color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 750;
+}
+
+#underline {
+    width: 5.2rem;
+    height: 0.5rem;
+    border-radius: 5rem;
+    background-color: var(--select-color);
 }
