--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,5 @@
 @import "./sections/bmi.css";
 @import "./sections/trainers.css";
 @import "./sections/purchase.css";
+@import "./sections/review.css";
 @import "./layouts/header.css";
