--- a/css/main.css
+++ b/css/main.css
@@ -5,4 +5,5 @@
 @import "./sections/trainers.css";
 @import "./sections/purchase.css";
 @import "./sections/review.css";
+@import "./sections/contact-us.css";
 @import "./layouts/header.css";
