--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,5 @@
 @import "./sections/purchase.css";
 @import "./sections/review.css";
 @import "./sections/contact-us.css";
+@import "./layouts/footer.css";
 @import "./layouts/header.css";
