--- a/css/layouts/header.css
+++ b/css/layouts/header.css
@@ -1,4 +1,5 @@
 #header {
+    width: 100vw;
     height: 80px;
 }
 
@@ -14,7 +15,7 @@
 }
 
 #navbarNav ul {
-    align-items: end;
+    align-items: center;
     margin-left: 0.5rem;
 }
 
